# glossaryAPI

./: .gitignore  Dockerfile  Load_testing_rest_vs_grpc.md  Makefile  README.md  compose.yaml  locustfile.py  locustfile_grpc.py  locustfile_rest.py  pyproject.toml
app/: db.py  grpc_server.py  main.py  models.py  schemas.py
app/routers/: graph.py  terms.py
proto/: glossary.proto
scripts/: generate_docs.py  generate_grpc.py
static/: index.html
tests/: conftest.py  test_terms.py
